인포윈도우 변경

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  margin-top: 40px;
+  margin-top: 80px;
   margin-left: 150px;
 }
 
@@ -14,52 +14,44 @@ header {
 .logo{
   display: inline-block;
   margin-left: 30px; 
-  width: 200px;
-  height: 80px;
+  width: 380px;
+  height: 150px;
 }
  
 .search {
   position: relative;
-  width:480px;
+  width:700px;
 }
 
 .keyword {
-    width: 100%;
+  width: 100%;
     border: 1px solid #20A5E8;
-    height:42px;
     border-radius: 30px;
-    padding: 15px 20px;
-    margin-left:5px; 
-    margin-top: 46px;
-    font-size: 14px;
+    padding: 15px 25px;
+    margin-left: 10px; 
+  margin-top:87px;
+    font-size: 20px;
 }
 
 .keyword::placeholder {
-  font-size: 14px; /* 원하는 값으로 placeholder 글씨 크기를 설정합니다. 예를 들어, 16px로 설정합니다. */
+  font-size: 20px; /* 원하는 값으로 placeholder 글씨 크기를 설정합니다. 예를 들어, 16px로 설정합니다. */
 }
 
-/* .img-button {
-  width: 50px;
-  padding-top: 7px;
-  padding-bottom: 4px;
-} */
-
 #map {
-  width: 1000px;
-  height: 600px;
-  margin-left: 53px;
-  margin-top:-15px;
+  width: 1800px;
+  height: 1000px;
+  margin-left: 60px;
 }
 
 .search-btn {
   margin: 0;
   border: none;
   position: absolute;
-  width: 30px;
-  height:30px;
+  width: 35px;
+  height:35px;
   top: 5px;
   right: 0.5px;  
-  margin-top:46px;
+  margin-top:92px;
    margin-right:10px;
   background: url("https://i.ibb.co/k6tmJVT/image.png") no-repeat;
   background-size: contain;
@@ -67,6 +59,22 @@ header {
 }
 
 
+.label {
+  margin-bottom: 96px;
+}
 
+.label * {
+  display: inline-block;vertical-align: top;
+}
 
-
+.label .center {
+  display: inline-block;
+  height: 55px;
+  font-size: 12px;
+  line-height: 24px;
+  text-align: center; /* 중앙 정렬을 위한 속성 추가 */
+  background-color: white;
+  border-radius: 15px;
+  padding: 5px;
+  border: 1px solid black;
+}
