--- a/style.css
+++ b/style.css
@@ -89,3 +89,18 @@ header {
   font-weight: bold;
   font-family: "돋움", sans-serif; 
 }
+
+
+
+.curLo{
+  background-color: #20A5E8;
+  width: 250px;
+   border: 0px /*solid #20A5E8*/;
+  border-radius: 30px;
+  padding: 15px 25px;
+  margin-left:58px;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "나눔고딕", sans-serif;
+  color:white;
+}
