--- a/style.css
+++ b/style.css
@@ -1,106 +1,219 @@
-* {
-	box-sizing: border-box;
+
+/* mobile 규격 */
+@media screen and (max-width: 540px){
+  .wrap{
+        position:relative;
+        max-width:500px;
+        max-height: 300px;
+        width:100%;
+    }
+  
+  .logo{
+      width: 200px;
+      height: 80px;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  .search {
+      position: relative;
+        max-width:340px;
+        margin-top:-20px;
+  }
+    
+  .keyword {
+        width: 100%;
+        border: 1px solid #20A5E8;
+        border-radius: 30px;
+        padding: 10px 15px;
+        margin-left: 10px; 
+        font-size: 15px;
+  }
+    
+  .keyword::placeholder {
+        margin: 0 auto; 
+        font-size: 15px;
+  }
+    
+  #map {
+    position:absolute;
+    z-index:1;
+    top:0;left:0;
+    width:100%;
+    height:100%;
+  }
+    
+  .search-btn {
+    border: none;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: -51px;
+    right: 0.5px;  
+    margin-top: 58px;
+    margin-right:10px;
+    background: url("https://i.ibb.co/k6tmJVT/image.png") no-repeat;
+    background-size: contain;
+    cursor: pointer;
+  }
+    
+    
+  .label {
+    margin-bottom: 96px;
+  }
+    
+  .label * {
+    display: inline-block;vertical-align: top;
+  }
+    
+  .label .center {
+    display: inline-block;
+    height: 55px;
+    font-size: 12px;
+    line-height: 24px;
+    text-align: center; /* 중앙 정렬을 위한 속성 추가 */
+    background-color: white;
+    border-radius: 15px;
+    padding: 5px;
+    border: 1px solid black;
+  }
+    
+  .caution{
+    color:red;
+    font-weight: bold;
+    font-family: "돋움", sans-serif; 
+    font-size:13.5px;
+  }
+    
+    
+  .curLo{
+    background-color: #20A5E8;
+    width: 150px;
+    border: 0px /*solid #20A5E8*/;
+    border-radius: 30px;
+    padding: 10px 20px;
+    font-size: 12px;
+    font-weight: bold;
+    font-family: "나눔고딕", sans-serif;
+    color:white;
+    margin-top:310px;
+  }
+
 }
 
-body {
-  margin-top: 0px;
-  margin-left: 150px;
-}
 
-header {
-	display: flex;
+@media screen and (min-width: 541px) {
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin-top: 0px;
+    margin-left: 150px;
+  }
+
+  header {
+    display: flex;
   } 
 
-.logo{
-  display: inline-block;
-  margin-left: 30px; 
-  width: 245px;
-  height: 105px;
-}
- 
-.search {
-  position: relative;
-  width: 600px;
-}
+  .logo{
+    display: inline-block;
+    margin-left: 30px; 
+    width: 245px;
+    height: 105px;
+  }
+  
+  .search {
+    position: relative;
+    width: 600px;
+  }
 
-.keyword {
-  width: 100%;
-  border: 1px solid #20A5E8;
-  border-radius: 30px;
-  padding: 15px 25px;
-  margin-left: 10px; 
-  margin-top:54px;
-  font-size: 20px;
-}
-
-.keyword::placeholder {
-  font-size: 20px;
-}
-
-#map {
-  width: 1200px;
-  height: 650px;
-  margin-left: 60px;
-}
-
-.search-btn {
-  margin: 0;
-  border: none;
-  position: absolute;
-  width: 35px;
-  height:35px;
-  top: 5px;
-  right: 0.5px;  
-  margin-top: 58px;
-  margin-right:10px;
-  background: url("https://i.ibb.co/k6tmJVT/image.png") no-repeat;
-  background-size: contain;
-  cursor: pointer;
-}
+  .keyword {
+    margin: 0 auto; 
+    width: 100%;
+    border: 1px solid #20A5E8;
+    border-radius: 30px;
+    padding: 15px 25px;
+    margin-left: 10px; 
+    margin-top:54px;
+    font-size: 20px;
+  }
 
 
+  .keyword::placeholder {
+    margin: 0 auto; 
+    font-size: 20px;
+  }
+
+  .wrap{
+    position:relative;
+    max-width:1200px;
+    height: 650px;
+    width:100%;
+  }
+
+  #map {
+    width:100%;
+    height:100%;
+    margin-left: 60px;
+  }
+
+  .search-btn {
+    margin: 0;
+    border: none;
+    position: absolute;
+    width: 35px;
+    height:35px;
+    top: 5px;
+    right: 0.5px;  
+    margin-top: 58px;
+    margin-right:10px;
+    background: url("https://i.ibb.co/k6tmJVT/image.png") no-repeat;
+    background-size: contain;
+    cursor: pointer;
+  }
+
+  .label {
+    margin-bottom: 96px;
+  }
+
+  .label * {
+    display: inline-block;vertical-align: top;
+  }
+
+  .label .center {
+    display: inline-block;
+    height: 55px;
+    font-size: 12px;
+    line-height: 24px;
+    text-align: center; /* 중앙 정렬을 위한 속성 추가 */
+    background-color: white;
+    border-radius: 15px;
+    padding: 5px;
+    border: 1px solid black;
+  }
+
+  .caution{
+    margin-top:-10px;
+    margin-left:58px;
+    color:red;
+    font-weight: bold;
+    font-family: "돋움", sans-serif; 
+  }
 
 
 
-.label {
-  margin-bottom: 96px;
-}
-
-.label * {
-  display: inline-block;vertical-align: top;
-}
-
-.label .center {
-  display: inline-block;
-  height: 55px;
-  font-size: 12px;
-  line-height: 24px;
-  text-align: center; /* 중앙 정렬을 위한 속성 추가 */
-  background-color: white;
-   border-radius: 15px;
-  padding: 5px;
-   border: 1px solid black;
-}
-
-.caution{
-  margin-top:-10px;
-  margin-left:58px;
-  color:red;
-  font-weight: bold;
-  font-family: "돋움", sans-serif; 
-}
-
-
-
-.curLo{
-  background-color: #20A5E8;
-  width: 250px;
-   border: 0px /*solid #20A5E8*/;
-  border-radius: 30px;
-  padding: 15px 25px;
-  margin-left:58px;
-  font-size: 20px;
-  font-weight: bold;
-  font-family: "나눔고딕", sans-serif;
-  color:white;
+  .curLo{
+    background-color: #20A5E8;
+    width: 250px;
+    border: 0px /*solid #20A5E8*/;
+    border-radius: 30px;
+    padding: 15px 25px;
+    margin-left:58px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "나눔고딕", sans-serif;
+    color:white;
+  }
 }
