--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@
 
   header {
      text-align:center;
-    margin-top:-15px;
+    margin-top:-40px;
   } 
  
 
@@ -248,6 +248,8 @@
     color:red;
     font-weight: bold;
     font-family: "돋움", sans-serif; 
+    margin-top:5px;
+    margin-bottom:5px;
   }
 
 /*   .btn{
