--- a/style.css
+++ b/style.css
@@ -130,6 +130,19 @@
     font-family: "나눔고딕", sans-serif;
     color:white;
   }
+ 
+ .kko{
+    background-color: #FEE500;
+    width: 250px;
+    border: 0px /*solid #20A5E8*/;
+    border-radius: 30px;
+    padding: 15px 20px;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: "나눔고딕", sans-serif;
+    color:hwb(0 0% 100%);
+  }
+
 }
 
 /* desktop ver. */
@@ -260,5 +273,17 @@
     font-weight: bold;
     font-family: "나눔고딕", sans-serif;
     color:white;
+  }
+
+  .kko{
+    background-color: #FEE500;
+    width: 450px;
+    border: 0px /*solid #20A5E8*/;
+    border-radius: 30px;
+    padding: 15px 25px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "나눔고딕", sans-serif;
+    color:hwb(0 0% 100%);
   }
 }
